--- a/Kori/KoriTopBar.razor
+++ b/Kori/KoriTopBar.razor
@@ -1,14 +1,38 @@
 <div id="kori-top-bar" class="kori-top-bar kori-ignore">
     <div class="top-bar-buttons">
-        @foreach (var button in Buttons)
-        {
-            <button class="top-bar-button @(SelectedButton == button ? "selected" : "")" @onclick="() => OnButtonClick(button)">
-                <img src="@button.IconPath" alt="@button.Text icon" class="icon normal-icon @(SelectedButton == button ? "hidden" : "")" />
-                <img src="@button.IconHoverPath" alt="@button.Text icon hover" class="icon hover-icon @(SelectedButton == button ? "" : "hidden")" />
-                <span class="btn-text">@button.Text</span>
-            </button>
-        }
+        <div class="left-buttons">
+            @foreach (var button in LeftButtons)
+            {
+                if (button.Text == null)
+                {
+                    <button class="top-bar-button toggle-button @(isToggledOn ? "toggle-on" : "toggle-off")" @onclick="() => ToggleButton()">
+                        <img src="@(isToggledOn ? button.IconSelectedPath : button.IconPath)" alt="Toggle icon" class="icon icon-on-off" />
+                    </button>
+                }
+                else
+                {
+                    <button class="top-bar-button @(SelectedButton == button ? "selected" : "")" @onclick="() => OnButtonClick(button)">
+                        <img src="@button.IconPath" alt="@button.Text icon" class="icon normal-icon @(SelectedButton == button ? "hidden" : "")" />
+                        <img src="@button.IconHoverPath" alt="@button.Text icon hover" class="icon hover-icon @(SelectedButton == button ? "" : "hidden")" />
+                        <img src="@button.IconSelectedPath" alt="@button.Text icon selected" class="icon selected-icon @(SelectedButton == button ? "" : "hidden")" />
+                        <span class="btn-text">@button.Text</span> 
+                    </button>
+                }
+            }
+        </div>
+
+        <div class="right-buttons">
+            @foreach (var button in RightButtons)
+            {
+                <button class="top-bar-button @(SelectedButton == button ? "selected" : "")" @onclick="() => OnButtonClick(button)">
+                    <img src="@button.IconPath" alt="@button.Text icon" class="icon normal-icon @(SelectedButton == button ? "hidden" : "")" />
+                    <img src="@button.IconHoverPath" alt="@button.Text icon hover" class="icon hover-icon @(SelectedButton == button ? "" : "hidden")" />
+                    <img src="@button.IconSelectedPath" alt="@button.Text icon selected" class="icon selected-icon @(SelectedButton == button ? "" : "hidden")" />
+                </button>
+            }
+        </div>
     </div>
+
     <div class="bottom-bar">
         <div class="logo">
             <img src="/_content/Kori/images/Kori_Logo.svg" alt="Logo" />
@@ -57,22 +81,36 @@
     [Parameter] public EventCallback<string> OnModeChanged { get; set; }
 
     private TopBarButton SelectedButton;
+    private bool isToggledOn = false;
 
     public class TopBarButton
     {
-        public string Text { get; set; }
+        public string? Text { get; set; }
         public string IconPath { get; set; }
         public string IconHoverPath { get; set; }
+        public string IconSelectedPath { get; set; }
         public string Mode { get; set; }
     }
 
-    private List<TopBarButton> Buttons = new List<TopBarButton>
+    private List<TopBarButton> LeftButtons = new List<TopBarButton>
     {
-        new TopBarButton { Text = "Search", IconPath = "/_content/Kori/icons/Search2.svg", IconHoverPath = "/_content/Kori/icons/Search2-blue.svg", Mode = "Search" },
-        new TopBarButton { Text = "Translate", IconPath = "/_content/Kori/icons/Lang.svg", IconHoverPath = "/_content/Kori/icons/Lang-blue.svg", Mode = "Translate" },
-        new TopBarButton { Text = "Blog", IconPath = "/_content/Kori/icons/Blog.svg", IconHoverPath = "/_content/Kori/icons/Blog-blue.svg", Mode = "Blog" },
-        new TopBarButton { Text = "A/B Testing", IconPath = "/_content/Kori/icons/AB.svg", IconHoverPath = "/_content/Kori/icons/AB-blue.svg", Mode = "ABTesting" }
-    };    
+        new TopBarButton { IconPath = "/_content/Kori/icons/Off.svg", IconSelectedPath = "/_content/Kori/icons/On.svg" },
+        new TopBarButton { IconPath = "/_content/Kori/icons/Lang.svg", IconHoverPath = "/_content/Kori/icons/Lang-hover.svg", IconSelectedPath = "/_content/Kori/icons/Lang-selected.svg", Text = "Language" },
+        new TopBarButton { IconPath = "/_content/Kori/icons/Blog.svg", IconHoverPath = "/_content/Kori/icons/Blog-hover.svg", IconSelectedPath = "/_content/Kori/icons/Blog-selected.svg", Text = "Blog" },
+        new TopBarButton { IconPath = "/_content/Kori/icons/AB.svg", IconHoverPath = "/_content/Kori/icons/AB-hover.svg", IconSelectedPath = "/_content/Kori/icons/AB-selected.svg", Text = "A/B Testing" }
+    };
+
+    private List<TopBarButton> RightButtons = new List<TopBarButton>
+    {
+        new TopBarButton { IconPath = "/_content/Kori/icons/Search2.svg", IconHoverPath = "/_content/Kori/icons/Search2-hover.svg", IconSelectedPath = "/_content/Kori/icons/Search2-selected.svg", Text = "Search" },
+        new TopBarButton { IconPath = "/_content/Kori/icons/History.svg", IconHoverPath = "/_content/Kori/icons/History-hover.svg", IconSelectedPath = "/_content/Kori/icons/History-selected.svg", Text = "History" },
+        new TopBarButton { IconPath = "/_content/Kori/icons/Tutorial.svg", IconHoverPath = "/_content/Kori/icons/Tutorial-hover.svg", IconSelectedPath = "/_content/Kori/icons/Tutorial-selected.svg", Text = "Tutorial" }
+    };
+
+    private void ToggleButton()
+    {
+        isToggledOn = !isToggledOn; 
+    }
 
     private async Task OnButtonClick(TopBarButton button)
     {
