--- a/Kori/KoriTopBar.razor.scss
+++ b/Kori/KoriTopBar.razor.scss
@@ -24,12 +24,25 @@
 
     .top-bar-buttons {
         display: flex;
+        justify-content: space-between;
         align-items: center;
+        padding: 0px 16px;
         gap: 8px;
         border: 1px solid #E5E7EA;
 
         .hidden {
             display: none;
+        }
+
+        .left-buttons, .right-buttons {
+            display: flex;
+            align-items: center;
+        }
+
+        .right-buttons {
+            .top-bar-button {
+                width: 40px;
+            }
         }
 
         .top-bar-button {
@@ -46,20 +59,32 @@
             transition: background-color 0.3s ease;
             position: relative;
 
+            &.toggle-button {
+                padding: 0 8px 0 0;
+                background: none;
+                box-shadow: none;
+            }
+
             .icon {
                 width: 16px;
                 height: 16px;
             }
 
-            .hover-icon {
-                display: none;
+            .icon-on-off {
+                width: 28px;
+                height: 28px;
             }
 
-            &:hover {
+            &:hover:not(.toggle-button) {
                 background: #EEF2FA;
                 box-shadow: inset 0 0 0 4px #FFFFFF;
+                padding: 8px;
 
                 .normal-icon {
+                    display: none;
+                }
+
+                .selected-icon {
                     display: none;
                 }
 
@@ -72,21 +97,26 @@
                 }
             }
 
-            &:focus {
+            &:focus:not(.toggle-button) {
                 outline: none;
                 box-shadow: inset 0 0 0 4px #FFFFFF;
             }
 
-            &.selected {
+            &.selected:not(.toggle-button) {
                 background: #EEF2FA;
                 transition: background 0.3s ease;
                 box-shadow: inset 0 0 0 4px #FFFFFF;
+                padding: 8px;
 
                 .normal-icon {
                     display: none;
                 }
 
                 .hover-icon {
+                    display: none;
+                }
+
+                .selected-icon {
                     display: inline;
                 }
 
@@ -95,6 +125,11 @@
                 }
             }
         }
+        /*&.toggle-button {
+            padding: 0;
+            background: none;
+            box-shadow: none;
+        }*/
     }
 
     .bottom-bar {
@@ -105,7 +140,7 @@
         box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.04), 0px 0px 2px 0px rgba(0, 0, 0, 0.06), 0px 0px 1px 0px rgba(0, 0, 0, 0.04);
 
         .logo {
-            margin-right: auto; 
+            margin-right: auto;
             display: flex;
 
             img {
