Build fixes for Sparc.Coop project

--- a/SparcFeatures/Blog/BlogTemplate.razor
+++ b/SparcFeatures/Blog/BlogTemplate.razor
@@ -32,7 +32,7 @@
 @code {
     [Parameter] public string? Slug { get; set; }
 
-    private Kori.TagManager B { get; } = new Kori.TagManager();
+    private Sparc.Kori.TagManager B { get; } = new Sparc.Kori.TagManager();
 
     private Dictionary<string, string> DefaultValues;
 
