Implemented Login component styles for mobile response

--- a/SparcFeatures/Shared/NavMenu.razor
+++ b/SparcFeatures/Shared/NavMenu.razor
@@ -42,6 +42,9 @@
         <a href="/" class="logo">
             <img src="/images/icons/Logo.png" />
         </a>
+        <div class="global-login-mobile">
+            <Kori.GlobalLogin />
+        </div>
         <div class="menu-container @ToggleMenuClass">
             <ul class="menu">
                 <li class="nav-link" @onclick="ToggleMenu">
@@ -67,6 +70,7 @@
                     <button @onclick="@Toggle" class="join btn-red">Join Community</button>
                 }
             </div>
+
         </div>
     </div>
 </nav>
