--- a/SparcFeatures/wwwroot/css/app.css
+++ b/SparcFeatures/wwwroot/css/app.css
@@ -506,9 +506,8 @@ nav .nav-mobile {
     align-items: center;
     background: #F2EDDF;
     z-index: 50;
-    overflow: hidden;
+    overflow: visible;
     position: fixed;
-    z-index: 1;
   }
   nav .nav-mobile .logo {
     width: 93px;
