--- a/Kori/GlobalLogin.razor.css
+++ b/Kori/GlobalLogin.razor.css
@@ -194,6 +194,73 @@
   left: 0;
   z-index: 10;
 }
+@media only screen and (max-width: 850px) {
+  .login-component {
+    position: static;
+    padding: 0;
+    z-index: auto;
+  }
+  .login-component .login-component__toggle {
+    position: fixed;
+    top: 16px;
+    right: 66px;
+    z-index: 1001;
+  }
+  .login-component .login-component__menu {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 70%;
+    max-width: 400px;
+    padding: 16px;
+    background: var(--grey-900);
+    border: 1px solid var(--grey-700);
+    border-radius: 8px;
+    transform: translate(-50%, -50%);
+    display: none;
+    z-index: 1002;
+  }
+  .login-component .login-component__menu.show {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+  .login-component__overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1000;
+  }
+  .login-component__overlay.show {
+    display: block;
+    background: rgba(0, 0, 0, 0.5);
+  }
+  .login-component .login-component__form,
+  .login-component .login-component__menu-actions,
+  .login-component .login-component__btn {
+    width: 100%;
+    padding: 8px 0;
+    font-size: 16px;
+  }
+  .login-component .login-component__input {
+    width: 100%;
+    font-size: 16px;
+  }
+  .login-component .login-component__text-primary, .login-component .login-component__menu-header-wrapper, .login-component .login-component__menu-actions .login-component__login-btn__content figcaption, .login-component__menu-actions .login-component__login-btn__content .login-component figcaption, .login-component .login-component__menu-actions login-component__account-btn__content figcaption, .login-component__menu-actions login-component__account-btn__content .login-component figcaption,
+  .login-component .login-component__text-secondary,
+  .login-component .login-component__menu-header-wrapper p,
+  .login-component .login-component__menu-actions .login-component__login-btn__content aside,
+  .login-component__menu-actions .login-component__login-btn__content .login-component aside,
+  .login-component .login-component__menu-actions login-component__account-btn__content aside,
+  .login-component__menu-actions login-component__account-btn__content .login-component aside,
+  .login-component .login-component__text-btn {
+    font-size: 16px;
+    text-align: center;
+  }
+}
 
 @keyframes login-component__fadeIn {
   0% {
