--- a/Kori/GlobalLogin.razor.scss
+++ b/Kori/GlobalLogin.razor.scss
@@ -247,6 +247,75 @@
             z-index: 10;
         }
     }
+
+    @media only screen and (max-width: 850px) {
+        position: static; 
+        padding: 0;
+        z-index: auto;
+
+        .login-component__toggle {
+            position: fixed;
+            top: 16px;
+            right: calc(16px + 50px);
+            z-index: 1001;
+        }
+
+        .login-component__menu {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            width: 70%;
+            max-width: 400px;
+            padding: 16px;
+            background: var(--grey-900);
+            border: 1px solid var(--grey-700);
+            border-radius: 8px;
+            transform: translate(-50%, -50%);
+            display: none;
+            z-index: 1002;
+
+            &.show {
+                display: flex;
+                flex-direction: column;
+                gap: 16px;
+            }
+        }
+
+        &__overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            z-index: 1000;
+
+            &.show {
+                display: block;
+                background: rgba(0, 0, 0, 0.5);
+            }
+        }
+
+        .login-component__form,
+        .login-component__menu-actions,
+        .login-component__btn {
+            width: 100%;
+            padding: 8px 0;
+            font-size: 16px;
+        }
+
+        .login-component__input {
+            width: 100%;
+            font-size: 16px;
+        }
+
+        .login-component__text-primary,
+        .login-component__text-secondary,
+        .login-component__text-btn {
+            font-size: 16px;
+            text-align: center;
+        }
+    }
 }
 
 @keyframes login-component__fadeIn {
